--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -15,6 +15,10 @@ a {
   box-sizing: border-box;
 }
 
+p,input{
+  margin: 0;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
