--- a/frontend/src/components/User/User.module.css
+++ b/frontend/src/components/User/User.module.css
@@ -22,11 +22,6 @@
     width: 150px;
     height: 32px;
     text-align: center;
+    cursor: default;
 }
 
-.user__dropdown-button {
-    border: solid 2px #000000;
-    width: 32px;
-    height: 32px;
-    text-align: center;
-}
