--- a/frontend/src/components/NavList/NavList.module.css
+++ b/frontend/src/components/NavList/NavList.module.css
@@ -8,10 +8,12 @@
     display: inline-block;
     margin-left: 8px;
     margin-right: 8px;
+}
+
+.navlist__link {
+    display: block;
     border: solid 2px #000000;
     width: 125px;
     height: 32px;
     text-align: center;
 }
-
-.navlist__link {}
