--- a/design-system/components/atoms/MenuItem/MenuItem.module.css
+++ b/design-system/components/atoms/MenuItem/MenuItem.module.css
@@ -2,15 +2,20 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 10px;
+  padding: 34px 0 34px 32px;
   gap: 10px;
   position: relative;
-  width: 152px;
-  height: 88px;
-  background: #161616;
+  cursor: pointer;
 }
 
-.menuItem > img {
+.img {
   width: 20px;
   height: 20px;
+}
+
+.title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #fff;
 }
